--- a/wp-content/themes/aerospace/sass/components/_interactives.scss
+++ b/wp-content/themes/aerospace/sass/components/_interactives.scss
@@ -22,33 +22,3 @@
 		font-style: italic;
 	}
 }
-
-/*----------  Full Width Content  ----------*/
-.fullWidthFeatureContent {
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    text-align: center;
-
-    .fullWidthInner {
-        margin: 0 auto;
-        @include breakpoint("small") {
-            max-width: 95% !important;
-        }
-    }
-
-    .overlay-isActive & {
-        position: static;
-    }
-
-    @include breakpoint("medium") {
-        .sharing-shareBtns.isVisible {
-            max-width: $size__content-max-width;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
-}
