--- a/wp-content/themes/aerospace/sass/components/_social-share.scss
+++ b/wp-content/themes/aerospace/sass/components/_social-share.scss
@@ -111,6 +111,7 @@
 	flex-wrap: wrap;
 	border-top: 2px solid $blue-gray;
 	margin: 0.5rem 0 1rem 0;
+	text-align: left;
 
 	a {
 		box-shadow: none;
